--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,18 @@ npm-debug.log
 target
 runtime
 symlinks
+
+*.iml
+*.m4a
+target
+.idea
+build
+nbproject
+conf/*.properties
+node_modules
+nbproject
+npm-debug.log
+.DS_Store
+runtime
+symlinks
+# IntelliJ
